Fix animation lines on mobile

--- a/src/MainLinks.css
+++ b/src/MainLinks.css
@@ -108,13 +108,16 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  background: white;
 }
 .main-links .main-link .left-bg {
   left: 0;
 }
 .main-links .main-link .right-bg {
   right: 0;
+}
+.main-links .main-link .moving .left-bg,
+.main-links .main-link .moving .right-bg {
+  background: white;
 }
 
 .main-links .main-link .shifting-sq {
@@ -257,6 +260,11 @@
   bottom: 0;
   left: 0;
   right: 0;
+}
+.main-links .main-link:not(:hover) .bars,
+.main-links .main-link.unhover .bars {
+  background: #F0C419;
+  transition: background 0s .4s;
 }
 
 .main-links .main-link .bars .bar {
